<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ajuda">

    <ImageButton
        android:id="@+id/btnUtilizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="@null"
        android:contentDescription="@string/comoUtilizar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnObjetivo"
        app:srcCompat="@drawable/ajuda_como_utilizar" />

    <ImageButton
        android:id="@+id/btnObjetivo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:background="@null"
        android:contentDescription="@string/objetivo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ajuda_objetivo_app" />

    <ImageButton
        android:id="@+id/btnSobre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="@null"
        android:contentDescription="@string/sobre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUtilizar"
        app:srcCompat="@drawable/ajuda_sobre" />

    <ImageButton
        android:id="@+id/btnVoltar"
        android:layout_width="140dp"
        android:layout_height="41dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="324dp"
        android:background="@null"
        android:contentDescription="@string/VoltarPrincipal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/botao_voltar" />
</android.support.constraint.ConstraintLayout>